# Engine

./: .gitignore  CMakeLists.txt  Engine.sln  README.md  Roadmap.md  build.bat  build.gradle
Core/: Core.h  Core.vcxproj  Core.vcxproj.filters  Debug.h  pch.h
Engine/: Engine.cpp  Engine.vcxproj
Graphics/: Graphics.vcxproj  Graphics.vcxproj.filters  Vector.h  Window.h
include/: keys.h
resources/shaders/: cluster_cull.comp  clustered_forward.frag  composite_frag.frag  compute.comp  fragment.frag  gbuffer.frag  lighting_frag.frag  luminance_histogram.comp  shadow_vert.vert  tonemap_frag.frag  tonemap_vert.vert  vertex.vert
src/: main.cpp
src/gui-debug/imgui/: imgui.cpp  imgui.h
src/main/java/org/tosa/engine/core/: Engine.java
src/main/java/org/tosa/engine/core/render/: Window.java
src/main/java/org/tosa/engine/core/renderer/: Shader.java  ShaderManagment.java  Window.java
src/main/java/org/tosa/engine/core/utils/: Colors.java  Debug.java  FileManagment.java  Input.java  KeyCode.java  MemoryManagment.java
src/renderer/: renderer.cpp  renderer.h
src/renderer/vulkan/: camera.cpp  camera.h  commandbuffer.cpp  commandbuffer.h  computepipeline.cpp  computepipeline.h  descriptors.cpp  descriptors.h  device.cpp  device.h  instance.cpp  instance.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  pipeline.cpp  pipeline.h  resources.cpp  resources.h  scene.cpp  scene.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  texturearray.cpp  texturearray.h  vulkan_context.cpp  vulkan_context.h
src/renderer/vulkan/light/: debug_mesh.cpp  debug_mesh.h  directional.cpp  directional.h  light.cpp  light.h  point.cpp  point.h  spot.cpp  spot.h
src/spectrumui/: spectrumui.h
src/test/java/: Laucnher.java
src/test/resources/shaders/: vertex.vs
src/utils/input/: input.cpp  input.h
src/utils/parsers/: obj.h
src/utils/texture/: texture.cpp  texture.h
src/utils/vars/: transform.cpp  transform.h
src/vma/: vma_impl.cpp
src/window/: window.cpp  window.h
